fixing spacing bug

--- a/src/css/study-aggregator.scss
+++ b/src/css/study-aggregator.scss
@@ -9,7 +9,7 @@ $gold: #e8b021;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 3vh;
+    margin-bottom: 3vh;
     h1 {
       text-align: center;
     }
@@ -41,9 +41,8 @@ $gold: #e8b021;
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 1vh;
+
       text-align: center;
-      padding: 1vh;
 
       color: black;
       h3 {
@@ -64,39 +63,39 @@ $gold: #e8b021;
     width: 75%;
     margin: 5px;
   }
+}
 
-  @media screen and (max-width: 600px) {
-    .studies {
-      &-desc {
-        margin: 0;
-        p {
-          width: 90%;
-        }
+@media screen and (max-width: 600px) {
+  .studies {
+    &-desc {
+      margin: 0;
+      p {
+        width: 90%;
       }
     }
-    .study-link {
-      width: 90%;
-    }
+  }
+  .study-link {
+    width: 90%;
+  }
 
-    .study-link:hover {
-      transform: scale(1.01);
-      h3 {
-        font-weight: 900;
-        color: $gold;
-      }
-    }
-
-    .indicator-hidden {
-      visibility: hidden;
-      margin: 5px;
-    }
-    .indicator-active {
-      content: "Active Series";
+  .study-link:hover {
+    transform: scale(1.01);
+    h3 {
+      font-weight: 900;
       color: $gold;
-      border-bottom: 2px $gold solid;
-      text-align: center;
-      width: 75%;
-      margin: 5px;
     }
+  }
+
+  .indicator-hidden {
+    visibility: hidden;
+    margin: 5px;
+  }
+  .indicator-active {
+    content: "Active Series";
+    color: $gold;
+    border-bottom: 2px $gold solid;
+    text-align: center;
+    width: 75%;
+    margin: 5px;
   }
 }
